// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en <SearchScreen/> debe de mostrar a batman y el input con el valor del queryString 1`] = `
<div>
  <h1>
    Search scren
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-md-5 col-sm-12"
    >
      <h4>
        Form search
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman"
        />
        <div
          className="d-grid gap-2"
        >
          <button
            className="btn mt-2 btn-block btn-outline-primary"
            type="submit"
          >
            Search...
          </button>
        </div>
      </form>
    </div>
    <div
      className="col-md-7 col-sm-12"
    >
      <h4>
         Resuts 
      </h4>
      <hr />
      <div
        className="row"
      >
        <div
          className="col-md-12 alert alert-danger text-center"
        >
          There is no  hero with 
          batman
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pruebas en <SearchScreen/> debe de mostrarse correctamente con valores por defecto 1`] = `
<div>
  <h1>
    Search scren
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-md-5 col-sm-12"
    >
      <h4>
        Form search
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value=""
        />
        <div
          className="d-grid gap-2"
        >
          <button
            className="btn mt-2 btn-block btn-outline-primary"
            type="submit"
          >
            Search...
          </button>
        </div>
      </form>
    </div>
    <div
      className="col-md-7 col-sm-12"
    >
      <h4>
         Resuts 
      </h4>
      <hr />
      <div
        className="row"
      >
        <div
          className="col-md-12 alert alert-info text-center"
        >
          search a heroe
        </div>
      </div>
    </div>
  </div>
</div>
`;
